- warble.rb: Add config.bundle_without that controls Bundler groups to
  be skipped, like 'Bundler.settings.without'.
- warble.rb: Add config.compiled_ruby_files to specify which Ruby
  files to compile when using the "compiled" feature. Defaults to
  compiling all Ruby files.
- Exclude 'tmp/war' directory so that people upgrading from 0.9 won't
  accidentally include it in their war file.

== 1.1.0

- Add concept of "features" -- small Rake tasks that run before the
  creation of the war file and make manipulations to the war file
  structure.
- Add 'gemjar' feature: Bundle all gems into a gems.jar to reduce the
  number of files in the archive (mostly useful for Google AppEngine).
  Usage: run "warble gemjar war" or set config.features = %w(gemjar) in
  warble.rb to use this feature.
- Add 'executable' feature: Bundle an embedded web server in the war
  file so that the entire application can be run as
  'java -jar myapp.war'.
  Usage: run "warble executable war" or set config.features = %w(executable)
  in warble.rb to use this feature.
  To see embedded webserver options, add '--help' to the 'java -jar'
  command line.
- No longer embed config.ru in web.xml as 'rackup' parameter by
  default. Instead, config.ru is included in the war file.
- Bump jruby-rack version requirement to 0.9.8.

== 1.0.3

- Tracking recent Bundler changes - handle locked Gemfiles differently
  than unlocked ones
- Handle file-based symlinks, and warn about inoperational directory
  symlinks under non-JRuby versions of Ruby.

== 1.0.2

- Add 'warble pluginize' task back. This task now just creates a
  vendor/plugins/warbler/tasks/warbler.rake file. There's no need to
  "vendor" all of Warbler into your application anymore.

== 1.0.1

- Fix careless bug where Warbler doesn't work with JRuby 1.4

== 1.0

- Warbler hits 1.0! There are enough structural changes in Warbler
  that I feel it's time to roll the major version over to 1.0.