@@ -6,7 +6,7 @@ Gem::Specification.new do |s|
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Nick Sieger"]
-  s.date = %q{2010-08-04}
+  s.date = %q{2010-08-05}
   s.default_executable = %q{warble}
   s.description = %q{Warbler is a gem to make a .war file out of a Rails, Merb, or Rack-based
 application. The intent is to provide a minimal, flexible, ruby-like way to
